# address-mapper

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  Taskfile.yml  app-requirements.md  build.sh  compose.yaml  package.json  requirements.md  vercel.json  wrangler.toml
api/: .env.example  Dockerfile  Dockerfile.dev  entrypoint.sh  main.py  pyproject.toml
api/app/: main.py
api/app/routers/: __init__.py  extract.py  geocode.py  health.py
api/src/address_mapper_api/: __init__.py  upload_image.py
api/tests/: test_health.py
downloaded-docs/: ag2-quickstart.txt  shad-cn.txt  tailwind-v4-blog.txt  vite-tailwind-v4.txt
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/: index.css
frontend/src/components/: address-map.tsx  image-upload.tsx
ui/: Dockerfile  Dockerfile.dev  biome.jsonc  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: address-map.tsx
ui/src/components/ui/: button.tsx
ui/src/pages/: CameraPage.tsx  ListPage.tsx  MapPage.tsx
