[project]
name = "address-mapper-api"
version = "0.1.0"
description = "FastAPI service for address extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "openai==1.85.0",
    "httpx==0.28.1",
    "pillow==11.2.1",
    "python-multipart==0.0.20",
]

[dependency-groups]
dev = [
    "ruff==0.11.13",
]
